--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".ExpensesActivity" android:parentActivityName=".MainActivity" />
         <activity android:name=".GroupFormActivity"
             android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ExpensesDetailActivity"
+            android:parentActivityName=".ExpensesActivity" />
     </application>
 
 </manifest>
