--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ExpensesActivity" android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".ExpenseFormActivity"
+            android:parentActivityName=".ExpensesDetailActivity" />
         <activity android:name=".GroupFormActivity"
             android:parentActivityName=".MainActivity" />
         <activity
