Implement GroupActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity
             android:name=".ExpensesDetailActivity"
             android:parentActivityName=".ExpensesActivity" />
+        <activity android:name=".GroupActivity"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
