--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <activity
             android:name=".GroupActivity"
             android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".PaymentFormActivity" />
     </application>
 
 </manifest>
