--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
 
     // image crop library
     implementation 'com.oginotihiro:cropview:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
